Корректирует хлебные крошки

--- a/catalog.html
+++ b/catalog.html
@@ -35,10 +35,13 @@
       <section class="hero-block-filter container">
         <h2 class="hero-block-filter-title">Гостиницы Седоны</h2>
         <div class="breadcrumbs">
+          <a class="home-link" href="index.html">
           <div class="breadcrumbs-home-icon breadcrumbs-item">
             <span class="visually-hidden">На главную</span>
           </div>
-          <a href="#" class="breadcrumbs-item">Гостиницы</a>
+          </a>
+
+          <span class="breadcrumbs-item">Гостиницы</span>
         </div>
 
         <div class="catalog-filter-box">
@@ -67,15 +70,15 @@
               <legend class="catalog-filter-title">Тип жилья:</legend>
               <ul class="catalog-filter-list">
                 <li class="catalog-filter-item">
-                  <input class="control-radio-input" type="radio" id="hotel" name="hotel" value="hotel">
+                  <input class="control-radio-input" type="radio" id="hotel" name="hotel-radio" value="hotel">
                   <label for="hotel" class="control-radio">Гостиница</label>
                 </li>
                 <li class="catalog-filter-item">
-                  <input class="control-radio-input" type="radio" id="motel" name="motel" value="motel">
+                  <input class="control-radio-input" type="radio" id="motel" name="hotel-radio" value="motel">
                   <label for="motel" class="control-radio">Мотель</label>                                      
                 </li>
                 <li class="catalog-filter-item">
-                  <input class="control-radio-input" type="radio" id="apartments" name="apartments" value="apartments">
+                  <input class="control-radio-input" type="radio" id="apartments" name="hotel-radio" value="apartments">
                   <label for="apartments" class="control-radio">Апартаменты</label>                                      
                 </li>
               </ul>
