--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
               <div class="hotel-name">Amara Resort & Spa</div>
               <div class="hotel-type">Гостиница</div>
               <div class="hotel-price">От 4000 ₽</div>
-              <a class="hotel-read-more brown-button">подробнее</a>
+              <a href="#" class="hotel-read-more brown-button">подробнее</a>
               <button class="hotel-to-favourite blue-button">в избранное</button>
               <div class="hotel-stars four-stars"></div>
               <div class="hotel-raiting-amount">Рейтинг: 8,5</div>
@@ -147,7 +147,7 @@
               <div class="hotel-name">Villas at Poco Diablo</div>
               <div class="hotel-type">Гостиница</div>
               <div class="hotel-price">От 5000 ₽</div>
-              <a class="hotel-read-more brown-button">подробнее</a>
+              <a href="#" class="hotel-read-more brown-button">подробнее</a>
               <button class="hotel-to-favourite green-button">в избранном</button>
               <div class="hotel-stars four-stars"></div>
               <div class="hotel-raiting-amount">Рейтинг: 9,2</div>
@@ -159,7 +159,7 @@
               <div class="hotel-name">Desert Quail Inn</div>
               <div class="hotel-type">Гостиница</div>
               <div class="hotel-price">От 2500 ₽</div>
-              <a class="hotel-read-more brown-button">подробнее</a>
+              <a href="#" class="hotel-read-more brown-button">подробнее</a>
               <button class="hotel-to-favourite blue-button">в избранное</button>
               <div class="hotel-stars three-stars"></div>
               <div class="hotel-raiting-amount">Рейтинг: 6,9</div>
@@ -171,7 +171,7 @@
               <div class="hotel-name">GreenTree Inn</div>
               <div class="hotel-type">Гостиница</div>
               <div class="hotel-price">От 1500 ₽</div>
-              <a class="hotel-read-more brown-button">подробнее</a>
+              <a href="#" class="hotel-read-more brown-button">подробнее</a>
               <button class="hotel-to-favourite blue-button">в избранное</button>
               <div class="hotel-stars two-stars"></div>
               <div class="hotel-raiting-amount">Рейтинг: 5,0</div>
