--- a/index.html
+++ b/index.html
@@ -44,33 +44,47 @@
         <p class="about-box-decription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
         <ul class="about-box-squares">
-          <li class="about-box-square-item about-box-first">
-            <h3 class="square-item-title">Настоящий городок</h3>
-            <p class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <li class="about-box-square-item square-item square-item-has-picture about-box-square-item-dark">
+            <div class="square-item-content">
+              <h3 class="square-item-title">Настоящий городок</h3>
+              <p class="square-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <div class="square-item-picture">
+              <img width="800" height="385" src="img/true-city.jpg" class="" alt="Фото настоящего городка">
+            </div>
           </li>
 
-          <div class="about-box-square-item about-box-second"></div>
-
-          <li class="about-box-square-item about-box-third">
-            <h3 class="square-item-title">Небольшая площадь</h3>
-            <p class="square-item-description">Все достопримечательности находятся очень близко</p>
+          <li class="about-box-square-item square-item about-box-square-item-light ">
+            <div class="square-item-content">
+              <h3 class="square-item-title">Небольшая площадь</h3>
+              <p class="square-item-description">Все достопримечательности находятся очень близко</p>
+            </div>
           </li>
 
-          <li class="about-box-square-item about-box-fourth">
-            <h3 class="square-item-title">Красивая дорога</h3>
-            <p class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <li class="about-box-square-item square-item about-box-square-item-very-light ">
+            <div class="square-item-content">
+              <h3 class="square-item-title">Красивая дорога</h3>
+              <p class="square-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
           </li>
 
-          <li class="about-box-square-item about-box-fifth">
-            <h3 class="square-item-title">Мало туристов</h3>
-            <p class="square-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+          <li class="about-box-square-item square-item about-box-square-item-light ">
+            <div class="square-item-content">            
+              <h3 class="square-item-title">Мало туристов</h3>
+              <p class="square-item-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>  
           </li>
 
-          <li class="about-box-square-item about-box-sixth"></li>
 
-          <li class="about-box-square-item about-box-seventh">
-            <h3 class="square-item-title">Там есть <br>мост дьявола</h3>
-            <p class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>        
+          <li class="about-box-square-item square-item square-item-has-picture about-box-square-item-dark">
+            <div class="square-item-picture">
+              <img width="800" height="385" src="img/bridge.jpg" class="" alt="Фото моста">
+            </div>
+            <div class="square-item-content">
+              <h3 class="square-item-title">Там есть <br>мост дьявола</h3>
+              <p class="square-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+
           </li>
 
         </ul>
@@ -84,20 +98,20 @@
         <ul class="advantages-box-wrapper">
           <li class="advantage-item item-home">
             <img class="advantage-item-img" width="75" height="72" src="img/home.svg" alt="Доступное жильё">
-            <div class="advantage-item-title">Жильё</div>
-            <div class="advantage-item-description">Рекомендуем пожить <br>в настоящем мотеле,<br> всё как в кино!</div>
+            <h3 class="advantage-item-title">Жильё</h3>
+            <p class="advantage-item-description">Рекомендуем пожить <br>в настоящем мотеле,<br> всё как в кино!</p>
           </li>
 
           <li class="advantage-item">
             <img class="advantage-item-img" width="74" height="70" src="img/food.svg" alt="Вкусная еда">
-            <div class="advantage-item-title">Еда</div>
-            <div class="advantage-item-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</div>
+            <h3 class="advantage-item-title">Еда</h3>
+            <p class="advantage-item-description">Всегда заказывайте<br> топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
           <li class="advantage-item item-present">
             <img class="advantage-item-img" width="64" height="76" src="img/present.svg" alt="Сувениры на память">
-            <div class="advantage-item-title">Сувениры</div>
-            <div class="advantage-item-description">Не только китайского,<br> но и настоящего местного производства!</div>
+            <h3 class="advantage-item-title">Сувениры</h3>
+            <p class="advantage-item-description">Не только китайского,<br> но и настоящего местного производства!</p>
           </li>
 
         </ul>
@@ -201,7 +215,9 @@
         </li>
       </ul>
       <a href="tel:+78128121212" class="page-footer-phone">+7 (812) 812-12-12</a>
-      <a class="page-footer-copyright-link" href="https://htmlacademy.ru/" aria-label="Html academy copyright"></a>
+      <a class="page-footer-copyright-link" href="https://htmlacademy.ru/">
+        <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34"><path fill="#000" d="M0 13.256v2.6h2.5v-2.6H0ZM11.6 4.856c-1.6 0-2.8.7-3.6 1.7h-.1v-6.2h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.156h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.956c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.056c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.356h-2v12.7ZM28.9 20.056c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.356c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.056c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.156c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.256c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.256c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.356l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></svg>
+      </a>
     </footer>
   </div>  
   <script src="js/popup.js"></script>
