удаляет ошибки валидации

--- a/catalog.html
+++ b/catalog.html
@@ -235,11 +235,11 @@
                 <div class="search-popup-title-age"><span>Взрослые:</span> </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <button type="button" href="#" class="number-minus" aria-label="minus"></button>
+                    <button type="button" class="number-minus" aria-label="minus"></button>
                   </div>
                   <input class="search-popup-number-text" aria-label="число взрослых" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
-                    <button type="button" href="#" class="number-plus" aria-label="plus"></button>
+                    <button type="button" class="number-plus" aria-label="plus"></button>
                   </div>  
                 </div>
               </div> 
@@ -250,11 +250,11 @@
                 </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <button type="button" href="#" class="number-minus" aria-label="minus"></button>
+                    <button type="button" class="number-minus" aria-label="minus"></button>
                   </div>
                   <input class="search-popup-number-text delivery-input" aria-label="число детей" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
-                    <button type="button" href="#" class="number-plus" aria-label="plus"></button>
+                    <button type="button" class="number-plus" aria-label="plus"></button>
                   </div>  
                 </div>
               </div> 
