--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <div class="search-popup-header">
             <h2 class="search-popup-title">Поиск гостиницы в Седоне</h2>
             <div class="close-wrapper">
-              <button type="button" href="#" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></button>
+              <button type="button" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></button>
             </div>
           </div>  
           <fieldset class="search-popup-fieldset">
@@ -165,11 +165,11 @@
                 <div class="search-popup-title-age"><span>Взрослые:</span> </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <button type="button" href="#" class="number-minus" aria-label="minus"></button>
+                    <button type="button" class="number-minus" aria-label="minus"></button>
                   </div>
                   <input class="search-popup-number-text" aria-label="число взрослых" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
-                    <button type="button" href="#" class="number-plus" aria-label="plus"></button>
+                    <button type="button" class="number-plus" aria-label="plus"></button>
                   </div>  
                 </div>
               </div> 
@@ -180,11 +180,11 @@
                 </div>
                 <div class="search-popup-number-wrapper">
                   <div class="number-minus-wrapper">
-                    <button type="button" href="#" class="number-minus" aria-label="minus"></button>
+                    <button type="button" class="number-minus" aria-label="minus"></button>
                   </div>
                   <input class="search-popup-number-text delivery-input" aria-label="число детей" type="text" name="count" value="2">
                   <div class="number-plus-wrapper">   
-                    <button type="button" href="#" class="number-plus" aria-label="plus"></button>
+                    <button type="button" class="number-plus" aria-label="plus"></button>
                   </div>  
                 </div>
               </div> 
