--- a/catalog.html
+++ b/catalog.html
@@ -211,7 +211,7 @@
           <div class="search-popup-header">
             <h2 class="search-popup-title">Поиск гостиницы в Седоне</h2>
             <div class="close-wrapper">
-              <button type="button" href="#" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></button>
+              <button type="button" class="close-popup open-popup close-icon-popup-search" aria-label="закрыть"></button>
             </div>
           </div>  
           <fieldset class="search-popup-fieldset">
