--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="favicon.png"> 
+  <link rel="icon" type="image/png" href="favicon.png"> 
 </head>
 <body class="catalog-page">
   <div class="body-wrapper-inner">
@@ -26,7 +26,7 @@
       <div class="user-nav">
         <button type="button" class="user-nav-search" aria-label="Поиск"></button>
         <button type="button" class="user-nav-favourite" aria-label="В избранное"><span class="user-nav-favourite-number">12</span></button>
-        <a title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу сюда!</a>
+        <a href="#" title="Получить преложение" class="user-nav-action-link open-popup brown-button">Хочу сюда!</a>
       </div>
     </header>
 
